production frontend endpoint update